k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-app-service
spec:
  selector:
    app: crud-app
  ports:
  - protocol: TCP 
    port: 5000
    targetPort: 5000
